
package proto;

option java_package = "com.lvl6.aoc2.noneventprotos";
option java_outer_classname = "UserEquipRepair";

message UserEquipRepairProto {
	optional string userEquipRepairID = 1;
	optional string userID = 2;
	optional string equipId = 3;
	//optional string equipName = 3;
	optional int32 equipLevel = 4;
	optional int32 durability = 5;
	optional int64 expectedStartMillis = 6; //time equip should start being repaired
	optional int64 queuedTimeMillis = 7;    //time goes into queue
	optional int64 timeAcquired = 8;
	optional int32 levelOfUserWhenAcquired = 9;
	optional string dungeonRoomOrChestAcquiredFrom = 10;
	
	
}